# Rustream

./: Cargo.toml
src/: main.rs
