[package]
name = "rustream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u = {git = "https://github.com/LindonAliu/m3u", branch = "master", features = ["iptv"]}
gstreamer = "0.22.4"
termion = "3.0.0"
async-channel = "2.0.0"
